# ring-fit-adventure-ocr

./: pyproject.toml
ring_fit/: fit_result.py  fit_result_updater.py  fit_skill.py  gcp_credential.py  image_downloader.py
ring_fit/ocr/: base.py  vision_api.py
scripts/: update_fit_result.py
